# Data-Driven-Healthcare-Analytics

./: .bruin.example  .gitignore  Dockerfile.flink  Dockerfile.kestra  Makefile  README.md  docker-compose.yaml  pyproject.flink.toml  pyproject.toml
dashboard/: app.py
data-streaming/: bquxjob_7418a44a_19d9ff11460.csv  model.py
data-streaming/job/: pass_through.py
data-streaming/producers/: producer_real_time.py
notebooks/: 01_kafka_producer.ipynb  02_kafka_consumer.ipynb  03_spark_gcs.ipynb
orchestration/flows/: healthcare_warehouse.yaml
pipeline/: README.md  pipeline.yml
pipeline/assets/bronze/: healthcare_vitals.asset.yml  mimic_admissions.asset.yml  mimic_diagnoses.asset.yml  mimic_labevents.asset.yml  mimic_patients.asset.yml  raw_healthcare_admissions.asset.yml  raw_hospital_capacity.asset.yml  raw_hospital_placekey.asset.yml  raw_vitals_sign.asset.yml
pipeline/assets/gold/: dim_date.sql  dim_diagnosis.sql  dim_hospital.sql  dim_insurance.sql  dim_location.sql  dim_patient.sql  fact_admissions.sql  fact_hospital_capacity.sql  fact_vital_signs.sql  fct_admission.sql  fct_healthcare_vitals.sql  fct_labevents.sql
pipeline/assets/silver/: admissions.sql  diagnoses.sql  healthcare_admissions.sql  healthcare_vitals.sql  hospital_capacity.sql  hospital_placekey.sql  labevents.sql  patients.sql  vitals_sign.sql
terraform/: main.tf  outputs.tf  providers.tf  variables.tf
