[project]
name = "project-de-zoomcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gcsfs>=2026.3.0",
    "kafka-python>=2.3.1",
    "pyarrow>=23.0.1",
    "pyspark>=4.1.1",
]

[dependency-groups]
dev = [
    "fsspec>=2026.3.0",
    "jupyter>=1.1.1",
    "pandas>=3.0.2",
    "psycopg2>=2.9.11",
]
